--- a/veiws/navbar.html
+++ b/veiws/navbar.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <section>
+ <section class="main">
     <nav class="header">
         <h1>Wodis casual</h1>
         <ul class="nav_links">
